# quickstart

./: .gitmodules  README.md
.devcontainer/: Dockerfile  devcontainer.json
embedded-modules/: benchmarks.h
embench-wasm/: aha-mont64.wasm  benchmarks.h  crc32.wasm  cubic.wasm  edn.wasm  huffbench.wasm  matmult-int.wasm  md5sum.wasm  minver.wasm  nbody.wasm  nettle-aes.wasm  nettle-sha256.wasm  nsichneu.wasm  picojpeg.wasm  primecount.wasm  qrduino.wasm  sglib-combined.wasm  slre.wasm  st.wasm  statemate.wasm  tarfind.wasm  ud.wasm  wikisort.wasm
sample-modules/: binary-trees.wasm  coremark-semihosted.wasm  coremark-standalone.wasm  dhrystone-semihosted.wasm  dhrystone-standalone.wasm  fannkuch-redux.wasm  fasta.wasm  nbody.wasm  spectral-norm.wasm
targets/arm-none-eabi/: toolchain.cmake
targets/arm-none-eabi/nrf52832/wasm3-embench/: platformio.ini
targets/arm-none-eabi/nrf52832/wasm3-embench/src/: main.c
targets/arm-none-eabi/nrf52832/wasm3-embench/zephyr/: CMakeLists.txt
targets/arm-none-eabi/nrf52840/: README.md
targets/arm-none-eabi/nrf52840/wamr-coremark/: .gitignore  build_wamr.py  platformio.ini
targets/arm-none-eabi/nrf52840/wamr-coremark/lib/: CMakeLists.txt  wasm-micro-runtime
targets/arm-none-eabi/nrf52840/wamr-coremark/src/: main.c  wasi.c  wasmtime_ssp.h
targets/arm-none-eabi/nrf52840/wamr-coremark/src/platform/: platform_api_vmcore.c  platform_internal.h
targets/arm-none-eabi/nrf52840/wamr-coremark/zephyr/: nrf52840dongle_nrf52840.overlay  prj.conf
targets/arm-none-eabi/nrf52840/wasm3-coremark/: .gitignore  dfu_upload.py  platformio.ini
targets/arm-none-eabi/nrf52840/wasm3-coremark/lib/: wasm3
targets/arm-none-eabi/nrf52840/wasm3-coremark/src/: m3_api_wasi_custom.c  main.c
targets/arm-none-eabi/nrf52840/wasm3-coremark/zephyr/: CMakeLists.txt
targets/arm-none-eabi/raspberry-pi-0/wasm3-embench/: CMakeLists.txt  README.md  main.c
targets/riscv32-unknown-none/hifive1/generic-wasm3/: platformio.ini
targets/riscv32-unknown-none/hifive1/generic-wasm3/src/: main.c
targets/riscv64-unknown-none/sipeed/maix-bit/wasm3-embench/: patch_board.py  platformio.ini
targets/riscv64-unknown-none/sipeed/maix-go/wasm3-embench/: platformio.ini
utils/: generate-headers.py
(+3 files in other folders)
