cmake_minimum_required(VERSION 3.1)
set(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")
set(CMAKE_SYSTEM_NAME Generic)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
project (wamr-staticlib)
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Og")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -Os")

include_directories(${CMAKE_CURRENT_LIST_DIR}/wasm-micro-runtime/core/iwasm/include)
include_directories(${CMAKE_CURRENT_LIST_DIR}/../src/platform)
include_directories(${CMAKE_CURRENT_LIST_DIR}/wasm-micro-runtime/core/shared/platform/include)

set (SHARED_PLATFORM_CONFIG ${CMAKE_CURRENT_LIST_DIR}/../src/platform/shared_platform.cmake)
set (WAMR_BUILD_PLATFORM "platform")
set (WAMR_BUILD_TARGET "THUMBV7_VFP")
set (WAMR_BUILD_INTERP 1)
set (WAMR_BUILD_FAST_INTERP 1)
set (WAMR_BUILD_LIBC_BUILTIN 1)
set (WAMR_BUILD_LIBC_WASI 0)
set (WAMR_BUILD_LIB_PTHREAD 0)
set (WAMR_DISABLE_HW_BOUND_CHECK 0)
set (WAMR_DISABLE_STACK_HW_BOUND_CHECK 0)
set (WAMR_ROOT_DIR ${CMAKE_CURRENT_LIST_DIR}/wasm-micro-runtime)
include(${CMAKE_CURRENT_LIST_DIR}/wasm-micro-runtime/build-scripts/runtime_lib.cmake)
add_library(vmlib STATIC ${WAMR_RUNTIME_LIB_SOURCE})
target_compile_options(vmlib PUBLIC -g)

target_link_options(vmlib PUBLIC
    -g -mabi=aapcs -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -nostartfiles -mfpu=fpv4-sp-d16 -mfp16-format=ieee -fno-common)
target_compile_options(vmlib PUBLIC -mabi=aapcs -fno-common -g -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -mfp16-format=ieee)
